--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
 												<li class=""><a href="">Gallery</a></li>
 												<li class=""><a href="">Program</a></li>
 												<li class=""><a href="">Speakers</a></li>
-												<li class=""><a href="volunteer.html">Volunteer</a></li>
 												<li class=""><a href="">About Us</a></li>
 												<li class=" last"><a href="">Why attend?</a></li>
 											</ul>
@@ -132,8 +131,7 @@
 
 							<div class="actions">
 								<div class="row">
-									<div class="col-sm-6 justify-center-xs justify-right"><a href="volunteer.html" class="btn">Apply to Volunteer</a></div>
-									<div class="col-sm-6 justify-center-xs justify-left padding-top-xs-30"><a href="mailto:<?php print encode_email('info@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
+									<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:<?php print encode_email('info@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
 								</div>
 							</div>
 
