Remove "Get tickets" button

--- a/index.html
+++ b/index.html
@@ -547,8 +547,7 @@
       <div class="content-main">
 
 	<div class="row">
-	<div class="col-sm-6 justify-center-xs justify-right"><a href="http://tickets.legaldesignsummit.com" target="_blank" class="btn">Get tickets</a></div>
-	<div class="col-sm-6 justify-center-xs justify-left padding-top-xs-30"><a href="mailto:<?php print encode_email('info@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
+	<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:<?php print encode_email('info@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
 </div>
 
 <div class="padding-top-40"></div>
