--- a/index.html
+++ b/index.html
@@ -27,19 +27,6 @@
     <script type="text/javascript" src="scripts/vendor/formstone/viewer.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
 
-    <script>
-
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-1497627-36', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-
-
     <title>Legal Design Summit</title>
 
   </head>
@@ -500,11 +487,11 @@
 	      <div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="http://legaltech.fi/" target="_blank"><img src="images/logos/logo_legal_tech_forum.png?<?php print time(); ?>"></a></div></div>
 	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.innovatethelaw.com/" target="_blank"><img src="images/logos/logo_poli.png?<?php print time(); ?>"></a></div></div>
 	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.lakimiesliitto.fi/in-english/" target="_blank"><img src="images/logos/logo_lakimiesliitto.png?<?php print time(); ?>"></a></div></div>
-	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://sisventures.org/" target="_blank"><img src="images/logos/logo_sisventures.jpg?<?php print time(); ?>"></a></div></div>
+	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://sisventures.org/" target="_blank"><img src="images/logos/logo_sisventures.jpg"></a></div></div>
 	    </div>
 	    <div class="row">
 	      <div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://gofore.com/en/home/" target="_blank"><img src="images/logos/logo_gofore.png?<?php print time(); ?>"></a></div></div>
-	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.ym.fi/en-US" target="_blank"><img src="images/logos/logo_ymparistoministerio.png?<?php print time(); ?>"></a></div></div>
+	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.ym.fi/en-US" target="_blank"><img src="images/logos/logo_ymparistoministerio.png"></a></div></div>
             </div>
 	  </div>
 	  
