--- a/why-attend.html
+++ b/why-attend.html
@@ -96,7 +96,7 @@
 
 	  <h2>What is legal design summit?</h2>
 
-	  <p>Legal Design Summit is the world's largest legal design event held in Helsinki on the 13th of September 2019. Our mission is to create a forum for forward-thinking professionals to exchange knowledge and expertise on law, design and digital services through interdisciplinary collaboration.</p>
+	  <p>Legal Design Summit is the world's largest legal design event held in Helsinki on September 2023. Our mission is to create a forum for forward-thinking professionals to exchange knowledge and expertise on law, design and digital services through interdisciplinary collaboration.</p>
 
 	  <div class="margin-top-40"></div>
 
