--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -114,7 +114,8 @@
 
 	      </div>
 
-	      <div class="event-info"><p class="enhanced">2023 <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.7466792716189!2d24.950566716371622!3d60.168372431960286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920bcf052f978b%3A0xda23a21022a81997!2sHelsinki%20City%20Hall!5e0!3m2!1sen!2sus!4v1567379709436!5m2!1sen!2sus" target="_blank" class="icon location"></a>Helsinki, Finland</p></div>
+	      <div class="event-info"><p class="enhanced">14-15 September 2023<a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.7466792716189!2d24.950566716371622!3d60.168372431960286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920bcf052f978b%3A0xda23a21022a81997!2sHelsinki%20City%20Hall!5e0!3m2!1sen!2sus!4v1567379709436!5m2!1sen!2sus" target="_blank" class="icon location"></a>Helsinki, Finland</p></div>
+		  <div class="event-info-subtitle"><p class="enhanced">Brainfactory 11-13 September</p></div>
 
 	      <div class="actions">
 		<div class="row">
