[about-us] Updated pictures

--- a/about-us.html
+++ b/about-us.html
@@ -101,7 +101,7 @@
 
 	    <p>We are a team of ambitious doers, who decided to create a forum for international experts in the fields of law, design, business and digital services.</p>
 
-	    <p>We are volunteers, and majority student! </p>
+	    <p>We are volunteers, and majority students! </p>
 
 
 	  </div>
@@ -242,12 +242,12 @@
 <div class="hidden-xs hidden-sm col-md-3">
 </div>
 <div class="col-xs-6 col-md-3">
-  <div class="image"><a href="mailto:pilvi.alopaeus@legaldesignsummit.com"><img src="images/team/team-2023/niina_putkonen.jpeg"></a></div>
+  <div class="image"><a href="mailto:pilvi.alopaeus@legaldesignsummit.com"><img src="images/team/team-2023/pilvi.jpeg"></a></div>
   <p>Pilvi Alopaeus<br><span class="small">The Pilvi - Founder and Advisor</p>
   <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/pilvialopaeus/" class="icon linkedin">LinkedIn</a></span></p>
 </div>
 <div class="col-xs-6 col-md-3">
-  <div class="image"><a href="mailto:noora.rissanen@legaldesignsummit.com"><img src="images/team/team-2023/lehtinen-juulia.jpeg"></a></div>
+  <div class="image"><a href="mailto:noora.rissanen@legaldesignsummit.com"><img src="images/team/team-2023/noora-rissanen.jpg"></a></div>
   <p>Noora Rissanen<br><span class="small">President of the Board</p>
   <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/noorarissanen/" class="icon linkedin">LinkedIn</a></span></p>
 </div>
