Adds speakers and program pages

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 		
 		<div class="menu-container">
 		  <ul class="menu"><li class=" first"><a href="#">Home</a></li>
-		    <li class=""><a href="">Gallery</a></li>
-		    <li class=""><a href="">Program</a></li>
-		    <li class=""><a href="">Speakers</a></li>
+		    <li class=""><a href="program.html">Program</a></li>
+		    <li class=""><a href="speakers.html">Speakers</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
