--- a/privacy.html
+++ b/privacy.html
@@ -145,10 +145,12 @@ p	  <p>However, we do not, as a rule, disclose your data to third parties in suc
 	    </div>
 	    <div class="padding-top-40"></div>
 	    <div class="social-media padding-top-40 justify-center">
-	      <a href="https://www.linkedin.com/company/10936008/" class="icon linkedin margin-right-5" target="_blank">LinkedIn</a>
-	      <a href="https://www.facebook.com/legaldesignsummit/" class="icon facebook margin-left-5 margin-right-5" target="_blank">Facebook</a>
-	      <a href="https://www.instagram.com/legaldesignfi/" class="icon instagram margin-left-5 margin-right-5" target="_blank">Instagram</a>
-	      <a href="https://twitter.com/legaldesignFI" class="icon twitter margin-left-5" target="_blank">Twitter</a>
+	      <div class="row col">
+		<a href="https://www.linkedin.com/company/10936008/" class="icon linkedin col-3 margin-right-5" target="_blank">LinkedIn</a>
+		<a href="https://www.facebook.com/legaldesignsummit/" class="icon facebook col-3 margin-right-5 margin-left-5" target="_blank">Facebook</a>
+		<a href="https://www.instagram.com/legaldesignfi/" class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
+		<a href="https://twitter.com/legaldesignFI" class="icon twitter col-3 margin-left-5" target="_blank">Twitter</a>
+	      </div>
 	    </div>
 	  </div>
 	</div>
