Added button for calling speakers, fixed contact us button

--- a/index.html
+++ b/index.html
@@ -113,14 +113,21 @@
 
 	      </div>
 
-	      <div class="event-info"><p class="enhanced">14-15 September 2023<a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.7466792716189!2d24.950566716371622!3d60.168372431960286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920bcf052f978b%3A0xda23a21022a81997!2sHelsinki%20City%20Hall!5e0!3m2!1sen!2sus!4v1567379709436!5m2!1sen!2sus" target="_blank" class="icon location"></a>Helsinki, Finland</p></div>
-		  <div class="event-info-subtitle"><p class="enhanced">Brainfactory 11-13 September</p></div>
-
-	      <div class="actions">
-		<div class="row">
-		  <div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:<?php print encode_email('info@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
+	    <div class="event-info">
+			<p class="enhanced">14-15 September 2023<a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.7466792716189!2d24.950566716371622!3d60.168372431960286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920bcf052f978b%3A0xda23a21022a81997!2sHelsinki%20City%20Hall!5e0!3m2!1sen!2sus!4v1567379709436!5m2!1sen!2sus" target="_blank" class="icon location"></a>Helsinki, Finland</p>
 		</div>
-	      </div>
+		<div class="event-info-subtitle">
+			<p class="enhanced">Brainfactory 11-13 September</p>
+		</div>
+
+	    <div class="actions">
+			<div class="extra-button">
+				<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30" style="margin-bottom: 10px;"><a href="https://forms.gle/DFXyqfFzFNtKD3n39" class="btn light">Call for Speakers Open Now!</a></div>
+		</div>
+		<div class="row">
+		  	<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:info&#64;legaldesignsummit.com" class="btn light">Contact Us</a></div>
+			</div>
+	    </div>
 
 	    </div>
 
