--- a/speakers.html
+++ b/speakers.html
@@ -67,6 +67,11 @@
       </div>
     </div>
 
+    <div class="actions">
+			<div class="extra-button">
+				<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30" style="margin-bottom: 10px;"><a href="https://forms.gle/DFXyqfFzFNtKD3n39" class="btn light">Call for Speakers Open Now!</a></div>
+		</div>
+
     <!-- Wrapper // Header Section Ends -->
 
     <!-- Wrapper // Content Section Begins -->
@@ -86,11 +91,7 @@
           <!-- Content Main Section Begins -->
           
           <div class="content-main">
-	    <div class="actions">
-	      <div class="row">
-		<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:<?php print encode_email('info@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
-	      </div>
-	    </div>
+	
 
 
 	    <div class="padding-top-40"></div>
