--- a/why-attend.html
+++ b/why-attend.html
@@ -139,7 +139,7 @@
           <div class="content-main">
 	    <div class="actions">
 	      <div class="row">
-		<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:<?php print encode_email('info@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
+		<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:info&#64;legaldesignsummit.com" class="btn light">Contact Us</a></div>
 	      </div>
 	    </div>
 
