--- a/index.html
+++ b/index.html
@@ -408,8 +408,22 @@
 	  <div class="padding-top-40">
 
 	    <h3>In co-operation with</h3>
-	    <p>We love collaborating with non-profits - Get in touch to join forces with us !</p>
-	    
+	    <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
+
+	    <div class="row padding-top-20">
+	      <div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://www.aalto.fi/en" target="_blank"><img src="images/collabs/aalto.png?<?php print time(); ?>"></a></div></div>
+              <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img src="images/collabs/clt.png?<?php print time(); ?>"></a></div></div>
+              <div class="col-md-2 justify-center"><div class="logo"><a href="https://jura.ku.dk/legaltechlab/" target="_blank"><img src="images/collabs/cltl.png?<?php print time(); ?>"></a></div></div>
+	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://elta.org/" target="_blank"><img src="images/collabs/elta.png?<?php print time(); ?>"></a></div></div>
+	    </div>
+
+	    <div class="row">
+	      <div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://www.it-oikeus.org/" target="_blank"><img src="images/collabs/it.png?<?php print time(); ?>"></a></div></div>
+	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php" target="_blank"><img src="images/collabs/vanderbilt.png?<?php print time(); ?>"></a></div></div>
+              <div class="col-md-2 justify-center"><div class="logo"><a href="https://legalhackers.org/" target="_blank"><img src="images/collabs/lh.png?<?php print time(); ?>"></a></div></div>
+	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.nulawlab.org/" target="_blank"><img src="images/collabs/nu-law.png?<?php print time(); ?>"></a></div></div>
+	    </div>
+
 	    <div class="row">
 	      <div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:<?php print encode_email('partnerships@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
 	    </div>
