Added speakers, ticket sale info and pictures for new partnerships

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		    <li class=""><a href="program.html">Program</a></li>
 		    <li class=""><a href="speakers.html">Speakers</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
+			<li class=""><a href="tickets.html">Tickets</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
 		</div>
@@ -125,7 +126,7 @@
 				<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30" style="margin-bottom: 10px;"><a href="https://forms.gle/DFXyqfFzFNtKD3n39" class="btn light">Call for Speakers Open Now!</a></div>
 		</div>
 		<div class="row">
-		  	<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:info&#64;legaldesignsummit.com" class="btn light">Contact Us</a></div>
+		  	<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="tickets.html" class="btn light">Tickets are out!</a></div>
 			</div>
 	    </div>
 
@@ -411,18 +412,25 @@
 	    <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
 
 	    <div class="row padding-top-20">
-	      <div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://www.aalto.fi/en" target="_blank"><img src="images/collabs/aalto.png?<?php print time(); ?>"></a></div></div>
-              <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img src="images/collabs/clt.png?<?php print time(); ?>"></a></div></div>
-              <div class="col-md-2 justify-center"><div class="logo"><a href="https://jura.ku.dk/legaltechlab/" target="_blank"><img src="images/collabs/cltl.png?<?php print time(); ?>"></a></div></div>
-	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://elta.org/" target="_blank"><img src="images/collabs/elta.png?<?php print time(); ?>"></a></div></div>
+	      <div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://www.aalto.fi/en" target="_blank"><img src="images/collabs/aalto.png"></a></div></div>
+              <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img src="images/collabs/clt.png"></a></div></div>
+              <div class="col-md-2 justify-center"><div class="logo"><a href="https://jura.ku.dk/legaltechlab/" target="_blank"><img src="images/collabs/cltl.png"></a></div></div>
+	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://elta.org/" target="_blank"><img src="images/collabs/elta.png"></a></div></div>
 	    </div>
 
 	    <div class="row">
-	      <div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://www.it-oikeus.org/" target="_blank"><img src="images/collabs/it.png?<?php print time(); ?>"></a></div></div>
-	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php" target="_blank"><img src="images/collabs/vanderbilt.png?<?php print time(); ?>"></a></div></div>
-              <div class="col-md-2 justify-center"><div class="logo"><a href="https://legalhackers.org/" target="_blank"><img src="images/collabs/lh.png?<?php print time(); ?>"></a></div></div>
-	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.nulawlab.org/" target="_blank"><img src="images/collabs/nu-law.png?<?php print time(); ?>"></a></div></div>
+	      <div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://www.it-oikeus.org/" target="_blank"><img src="images/collabs/it.png"></a></div></div>
+	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php" target="_blank"><img src="images/collabs/vanderbilt.png"></a></div></div>
+              <div class="col-md-2 justify-center"><div class="logo"><a href="https://legalhackers.org/" target="_blank"><img src="images/collabs/lh.png"></a></div></div>
+	      <div class="col-md-2 justify-center"><div class="logo"><a href="https://www.nulawlab.org/" target="_blank"><img src="images/collabs/nu-law.png"></a></div></div>
 	    </div>
+		
+	    <div class="row">
+			<div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://litelab.law.hku.hk/" target="_blank"><img src="images/collabs/iLITE-Lab.jpg"></a></div></div>
+			<div class="col-md-2 justify-center"><div class="logo"><a href="https://www.uchceu.com/en" target="_blank"><img src="images/collabs/universidad-uch.png"></a></div></div>
+				<div class="col-md-2 justify-center"><div class="logo"><a href="https://www.epj.es/" target="_blank"><img src="images/collabs/Escuela-de-Practica-Juridica.png"></a></div></div>
+			<div class="col-md-2 justify-center"><div class="logo"><a href="https://thinklegaltech.com/" target="_blank"><img src="images/collabs/thinklegaltech.png"></a></div></div>
+		  </div>
 
 	    <div class="row">
 	      <div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="mailto:<?php print encode_email('partnerships@legaldesignsummit.com'); ?>" class="btn light">Contact Us</a></div>
