--- a/why-attend.html
+++ b/why-attend.html
@@ -57,6 +57,7 @@
 		    <li class=""><a href="program.html">Program</a></li>
 		    <li class=""><a href="speakers.html">Speakers</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
+        <li class=""><a href="tickets.html">Tickets</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
 		</div>
