fixed images that did not display correctly

--- a/index.html
+++ b/index.html
@@ -426,10 +426,10 @@
 	    </div>
 		
 	    <div class="row">
-			<div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://litelab.law.hku.hk/" target="_blank"><img src="images/collabs/iLITE-Lab.jpg"></a></div></div>
-			<div class="col-md-2 justify-center"><div class="logo"><a href="https://www.uchceu.com/en" target="_blank"><img src="images/collabs/universidad-uch.png"></a></div></div>
-				<div class="col-md-2 justify-center"><div class="logo"><a href="https://www.epj.es/" target="_blank"><img src="images/collabs/Escuela-de-Practica-Juridica.png"></a></div></div>
-			<div class="col-md-2 justify-center"><div class="logo"><a href="https://thinklegaltech.com/" target="_blank"><img src="images/collabs/thinklegaltech.png"></a></div></div>
+			<div class="col-md-2 col-md-offset-2 justify-center"><div class="logo"><a href="https://litelab.law.hku.hk/" style="width: 200px; height: 200px;" target="_blank"><img src="images/collabs/LITE-Lab.jpg"></a></div></div>
+			<div class="col-md-2 justify-center"><div class="logo"><a href="https://www.uchceu.com/en" style="width: 200px; height: 200px;" target="_blank"><img src="images/collabs/universidad-uch.png"></a></div></div>
+				<div class="col-md-2 justify-center"><div class="logo"><a href="https://www.epj.es/" style="width: 200px; height: 200px;" target="_blank"><img src="images/collabs/Escuela-de-Practica-Juridica.png"></a></div></div>
+			<div class="col-md-2 justify-center"><div class="logo"><a href="https://thinklegaltech.com/" style="width: 200px; height: 200px;" target="_blank"><img src="images/collabs/thinklegaltech.png"></a></div></div>
 		  </div>
 
 	    <div class="row">
