--- a/speakers.html
+++ b/speakers.html
@@ -85,7 +85,7 @@
             <div class="col-xs-12 col-md-6">
               <div class="col-xs-6 col-md-6">
                 <div class="justify-center"> <h3 style="font-size: 25px;">Michael Doherty</h3></div>
-                <div class="image"><a><img src="images/speakers/2023/michael-doherty.jpg"></a></div>
+                <div class="image"><a><img src="images/speakers/2023/michael-doherty.JPG"></a></div>
                 <p>is Professor of Law, and Associate Head of the Law School, at Lancaster University, UK. His main teaching and research expertise, beyond Legal Design, is in constitutional law and human rights and he is co-author of Public Law (3rd edn, Routledge 2023). He is active in legal education and pedagogy and he co-created the Connecting Legal Education online community in 2020, and is a former Chair of the Association of Law Teachers. <br><br>Michael’s work in Legal Design encompasses education, cultural studies and disciplinarity, and access to justice. Professor Doherty is working with a team of Legal Design scholars and practitioners from around the world to launch the Legal Design Journal in 2023. Our goal is to provide a platform for great quality legal design work, and to make this as accessible as possible.<br><span class="small"></p>
               </div>
               <div class="col-xs-6 col-md-6">
