small fix to privacy wording, updated ticket site to scale right

--- a/privacy.html
+++ b/privacy.html
@@ -222,7 +222,7 @@
 				<li>Country</li>
 				<li>Occupation and/or organization</li>
 				</ul></td>
-			<td class="table-cell3">LEGITIMATE INTERESTS</td>
+			<td class="table-cell3">CONSENT & LEGITIMATE INTERESTS</td>
 			<td class="table-cell">
 				You can choose whether you want to provide this data when e.g., registering as a participant or becoming a partner through one of our partnership packages. There are four purposes to why data would be processed – these you may choose to add to your registration form voluntarily:
 				<ul style="list-style-type: disc; padding-left: 20px">
@@ -230,7 +230,7 @@
 					<li>Prior to the event, we will process all country data collected to create <span class="bold">an anonymized map of all the countries represented at the Summit</span> to be shared during the Summit and through our social media.</li>
 					<li>We may pseudonymize and whenever possible anonymize this personal data for development purposes: to understand our participants better and to be able to provide a better Summits in the future.</li>	
 				</ul>
-				We also process the below-mentioned personal data for the below-mentioned purpose and you can opt-out from it during your registration or at any time by following the instructions in section 6.
+				We also process the below-mentioned personal data for the below-mentioned purpose based on your consent that is collected at the registering. Please note that you can change your consent at any time. You can do this by yourself through the ticket system until 14.8.2023, 10 AM, and after that by emailing <span class="underline">privacy@legaldesignsummit.com</span>.
 				<ul style="list-style-type: disc; padding-left: 20px">
 					<li>Prior to the event, we will process all entity/organization data to create <span class="bold">a pseudonymized list of all entities/organizations represented at the Summit</span> to be shared to other participants prior to the event.</li>	
 				</ul>
