--- a/tickets.html
+++ b/tickets.html
@@ -35,7 +35,15 @@
         }
         .subtitle {text-transform: uppercase; color: #c30979; text-align: center;}
         .textbox{width: 1200px; margin: 0 auto; text-align: left; overflow-wrap: break-word;}
+
+
+        @media (max-width: 1300px) {
+        .textbox{width: 100%; margin: 0; padding: 0 20px;}
+        .column{display: block;}
+        }
       </style>
+
+      
 
   </head>
 
@@ -92,7 +100,7 @@
 
 	  <div class="margin-top-40"></div>
 
-	  <h4>TICKET SALE FOR SUMMIT STARTS AT 10 APRIL 2PM EET – GET YOURS NOW BEFORE THEY ARE GONE!</h4>
+	  <h4>TICKETS FOR THE SUMMIT ARE OUT NOW – GET YOURS NOW BEFORE THEY ARE GONE!</h4>
       <!-- <div style="height: 30px;" div class="margin-top-40"><h4><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" style="color: #50cec1;" class="link-hover">Link to the ticket site</a></h4></div> -->
       <div class="actions">
         <div class="row">
